--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,11 @@ main{
     cursor: pointer;
 }
 
+.revealed-bomb{
+    background-color: darkred;
+    color: white;
+}
+
 .btn{
     width: 100px;
     height: 50px;
@@ -79,4 +84,30 @@ figure img{
 
 .label-container{
     padding-inline: 10px;
+}
+
+.you-lost{
+    margin-top: 20px;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    font-size: 30px;
+}
+
+.you-lost-none{
+    display: none;
+}
+
+.reset{
+    margin-top: 15px;
+}
+
+#scoreboard {
+    margin-top: 20px;
+    font-size: 20px;
+    color: white;
+    text-align: center;
 }
